--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -434,6 +434,7 @@ section.l-c-banner {
     background: #f4f4f5;
     padding: 25px 20px;
     min-height: 200px;
+    box-shadow: 0px 6px 11px -6px #00000029;
 }
 
 #pd-n-e-slider .pd-content-card a{
@@ -487,4 +488,44 @@ section.l-c-banner {
     bottom: 20px;
     text-align: left;
     padding-left: 20px;
+}
+
+/* main menu stylling */
+
+.navbar #main-menu .menu-item a {
+    font-size: 15px;
+    color: rgba(50, 52, 50,1);
+    font-family: 'Roboto Slab', serif;
+    padding: 6px 15px;
+}
+
+#navbarNavDropdown{
+    width: 100%;
+}
+  
+#main-menu{
+    text-align: center;
+    align-items: center;
+    justify-content: center
+}
+
+.pd-logo-col{
+    text-align:center;
+}
+.pd-nav-col{
+    text-align:center;
+}
+
+.logo-wrap{
+    padding:10px 0;
+}
+
+.logo-wrap img{ 
+    width: 125px;
+    height: auto;
+    padding: 10px;
+}
+
+#navbar .pd-menu-bar .row{
+    align-items: center;
 }
