--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -506,11 +506,11 @@ section.l-c-banner {
 #main-menu{
     text-align: center;
     align-items: center;
-    justify-content: center
+    justify-content: flex-end;
 }
 
 .pd-logo-col{
-    text-align:center;
+    text-align:left;
 }
 .pd-nav-col{
     text-align:center;
@@ -528,4 +528,64 @@ section.l-c-banner {
 
 #navbar .pd-menu-bar .row{
     align-items: center;
+}
+
+#pd_fixed_nav{
+    padding:0;
+}
+
+#main-menu li a{
+    position: relative;
+}
+
+#main-menu .active a::after{
+    transform: scale(1);
+    transition: 0.5s;
+}
+
+#main-menu li a::after{
+    position: absolute;
+    content: '';
+    width: 60px;
+    height: 3px;
+    background-color: rgba(8, 122, 69,1);
+    left: 50%;
+    bottom: -5px;
+    margin-left: -30px;
+    transition: 0.5s;
+    transform: scale(0);
+}
+
+#main-menu li:hover a::after{
+    transform: scale(1);
+    transition: 0.5s;
+}
+
+/* sticky menu */
+
+.sticky {
+    position: fixed;
+    top: -18px;
+    width: 100%;
+    background: white;
+    z-index: 9999999999999;
+    transition: 0.5s;
+    padding: 10px 0;
+    box-shadow: 0px 5px 23px -13px #00000042;
+}
+
+.sticky+.content {
+    padding-top: 50px;
+}
+
+.sticky .logo-wrap img {
+    width: 100px;
+    transition: 0.5s;
+    padding-top: 22px;
+    padding-bottom:0;
+}
+
+.sticky #pd_fixed_nav {
+    padding: 17px 0 0;
+    transition: 0.5s;
 }
