--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -389,6 +389,42 @@ section.l-c-banner {
     border-radius: 75px;
 }
 
+.l-c-footer h4 {
+    font-size: 14px;
+    color: rgba(255, 255, 255,1);
+}
+  
+#footerMenu #footer-menu{
+    list-style: disc;
+    color: white;
+    padding-left: 14px;
+}
+
+#footerMenu #footer-menu .nav-link{
+    color: white;
+    font-size: 14px;
+    font-weight: 300;
+    padding: 0;
+    line-height: 22px;
+}
+
+.l-c-footer .pd-inf-footer p{
+    color: white;
+    margin-bottom: 2px;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.l-c-footer .pd-inf-footer .pd-footer-links{
+    margin-left: -6px;
+    margin-top: 10px;
+}
+
+
+
+
+
+/* news event */
 #pd-n-e-slider .pd-cert-card{
     padding: 10px;
 }
@@ -604,4 +640,149 @@ section.l-c-banner {
     color: rgba(51, 53, 51,1);
     text-align: center;
     font-weight: 300;
+    margin-bottom: 30px;
+}
+
+.l-c-product-sec{
+    background: #f4f4f5;
+    position:relative;
+}
+
+.l-c-product-sec::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 200px;
+    bottom: -35px;
+    left: 0;
+    background: url('http://localhost/ilovecoco/wp-content/uploads/2020/11/prod-back.png');
+    transform: rotate(180deg);
+    background-repeat: no-repeat;
+    background-position: 47% 6%;
+    background-size: 150%;
+    z-index: -1;
+}
+
+.l-c-product-sec::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 200px;
+    top: -32px;
+    left: 0;
+    background: url(http://localhost/ilovecoco/wp-content/uploads/2020/11/prod-back.png);
+    background-repeat: no-repeat;
+    background-position: 47% 6%;
+    background-size: 150%;
+    z-index: -1;
+}
+
+.pad-t-5{
+    padding-top:5%;
+}
+
+.pad-b-5{
+    padding-bottom:5%;
+}
+
+.pd-product-tab-home .tab-pane{
+    margin-bottom: 25px;
+}
+
+.pd-prod-card-home{
+    padding: 45px 10px;
+    background-color: white;
+}
+
+.pd-prod-card-home img{ 
+    width: 130px;
+    height: 130px;
+    margin-bottom: 15px;
+    object-fit: contain;
+}
+
+.pd-product-tab-home .tab-pane .col-lg-3{
+    padding: 5px;
+}
+
+.pd-product-tab-home .tab-pane h4{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.pd-product-tab-home .tab-pane p{
+    color: rgb(124, 124, 124);
+    font-size: 12px;
+    padding: 0 15px;
+}
+
+.pd-product-tab-home .tab-pane a{
+    background: rgba(51, 53, 51,1);
+    border-radius: 0;
+    padding: 5px 14px 6px !important;
+    color: white;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 26px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.pd-product-tab-home .tab-pane a:hover{
+    text-decoration: none;
+}
+  
+.pd-product-tab-home .nav-tabs .nav-item.show .nav-link, .pd-product-tab-home .nav-tabs .nav-link.active{
+    color: inherit;
+    background-color: unset;
+    border-color: unset;
+    border: none;
+}
+
+.pd-product-tab-home .pd-cat-box{
+    padding: 10px;
+    background: #1f915c;
+    text-align: center;
+    transition: 0.5s;
+}
+
+.pd-product-tab-home .pd-cat-box:hover{
+    transition: 0.5s;
+    transform: translateY(-2px);
+    box-shadow: 0px 12px 16px -8px #00000070;
+}
+
+.pd-product-tab-home .pd-cat-box img{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
+
+.pd-product-tab-home .pd-cat-box h4{
+        color: white;
+        font-size: 14px;
+        padding-top: 15px;
+}
+
+.pd-product-tab-home .nav-tabs .nav-item{
+    padding: 0;
+}
+
+.pd-product-tab-home #nav-tab {
+    display: block;
+    border: none;
+}
+
+.pd-product-tab-home .nav-tabs .nav-link:focus, .pd-product-tab-home .nav-tabs .nav-link:hover,.pd-product-tab-home .nav-tabs .nav-link{
+    border: none;
+    padding: 0 2px;
+    transition: 0.5s;
+}
+
+.pd-product-tab-home .nav-tabs{
+    border-bottom:none;
+}
+
+.pd-product-tab-home .nav-link.active .pd-cat-box{
+    transition: 0.25s;
+    background: #1b845a;
 }
