vision mission section developed

--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -831,6 +831,7 @@ section.l-c-banner {
     margin-top: 60px;
     background: white;
     margin-left: 50px;
+    padding: 40px;
 }
 
 .pd-vision-misison-sec .pd-direct-message-card .row{
