--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -66,6 +66,34 @@ button{
 .pd-aligned-center{
     align-items: center;
 }
+.owl-prev,.owl-next{
+    transition: 0.5s;
+}
+.owl-prev:hover,
+.owl-next:hover{
+    transition: 0.5s;
+    background: #087a45 !important;
+}
+
+
+ .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev{
+    background: rgba(51, 53, 51,1) !important;
+    border-radius: 0 !important;
+    padding: 0px 13px 8px !important;
+    color: white !important;
+    font-size: 30px !important;
+    font-weight: 100 !important;
+    line-height: 26px !important;
+}
+
+a{
+    transition: 0.5s;
+}
+.hover-green:hover{
+    transition: 0.5s;
+    background: #087a45 !important;
+}
+
 
 
 /* banner */
@@ -698,6 +726,13 @@ section.l-c-banner {
 .pd-prod-card-home{
     padding: 45px 10px;
     background-color: white;
+    transition: 0.5s;
+}
+
+.pd-prod-card-home:hover{
+    transition: 0.5s;
+    transform: translateY(-2px);
+    box-shadow: 0px 6px 14px -9px #0000006e;
 }
 
 .pd-prod-card-home img{ 
@@ -816,9 +851,13 @@ section.l-c-banner {
 }
 
 .pd-vision-misison-sec{
-    background: #056240;
-    padding: 3% 0 7%;
+    background: #f4f4f5;
+    padding:6% 0 9%;
+    background-position: 100% -130%;
+    background-size: 100% 99%;
+    background-repeat: no-repeat;
 }
+
 
 .pd-vision-misison-sec h2{
     color: white;
@@ -833,10 +872,11 @@ section.l-c-banner {
 }
 
 .pd-vision-misison-sec .pd-direct-message-card{
-    margin-top: 60px;
+    margin-top: 90px;
     background: white;
     margin-left: 50px;
     padding: 40px;
+    box-shadow: 0px 8px 78px -45px #0000006e;
 }
 
 .pd-vision-misison-sec .pd-direct-message-card .row{
@@ -853,6 +893,7 @@ section.l-c-banner {
     position: absolute;
     top: -92px;
     left: -50px;
+    box-shadow: 0px 17px 26px -28px black;
 }
 
 .pd-vision-misison-sec .pd-direct-message-card h5{
@@ -951,4 +992,25 @@ section.l-c-banner {
    color: white;
    font-weight: 300;
       
+}
+
+/* product wrapper */
+.pd-product-single-wrapper .pd-featured-prod{
+    background: #f4f4f5;
+}
+
+.pd-product-single-wrapper .l-c-certificate-sec .pd-cert-card:hover {
+    background: white;
+}
+
+
+.pd-product-single-wrapper .owl-nav{
+    right: 80px;
+    bottom: 20px;
+    text-align: left;
+    padding-left: 0px;
+}
+
+.pd-contact-main-banner iframe{
+    height: 400px;
 }
