--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -20,6 +20,13 @@ textdomain: ilovecoco
 
 */
 /* common */
+.pd-common-h2{
+    font-size: 45px;
+    color: rgba(51, 53, 51,1);
+    line-height: 1.2;
+    text-align: left;
+}
+
 .l-c-p-t-b-3{
     padding: 3% 0;
 }
@@ -1013,4 +1020,56 @@ section.l-c-banner {
 
 .pd-contact-main-banner iframe{
     height: 400px;
+}
+
+.pd-contact-inf-card .pd-footer-links img{
+    filter: invert(0.7);
+}
+
+.pd-contact-inf-card .pd-footer-links {
+    text-align: right;
+}
+
+.pd-contact-inf-card p{
+    margin-bottom: 10px;
+}
+
+.pd-contact-inf-card  .pd-cont-card-icons{
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
+    filter: invert(0.9);
+    margin-right: 2px;
+}
+
+.pd-contact-inf-card .pd-cont-card-left-img img{
+    height: 100%;
+    object-fit: cover;
+}
+
+.pd-contact-inf-card{
+    padding: 0px;
+    box-shadow: 0px 18px 47px -37px #00000073;
+    margin-top: -195px;
+    background: white;
+    position: relative;
+}
+
+.pd-contact-inf-card::after{
+    content: '';
+    background: white;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+
+.pd-contact-inf-card .pd-cont-card-right-content{
+    padding: 40px 40px 40px 10px;
+}
+
+.pd-contact-card-sec .container{
+    padding: 0 75px;
 }
