--- a/wp-content/themes/ilovecoco/style.css
+++ b/wp-content/themes/ilovecoco/style.css
@@ -20,6 +20,11 @@ textdomain: ilovecoco
 
 */
 /* common */
+
+.pd-flex{
+    display: flex;
+}
+
 .pd-common-h2{
     font-size: 45px;
     color: rgba(51, 53, 51,1);
@@ -66,6 +71,10 @@ textarea:focus{
     padding: 0;
 }
 
+.pd-pad-bot-30{
+    padding-bottom: 30px;
+}
+
 button{
     outline: none !important;
 }
@@ -99,6 +108,7 @@ a{
 .hover-green:hover{
     transition: 0.5s;
     background: #087a45 !important;
+    text-decoration: none;
 }
 
 
@@ -1072,4 +1082,48 @@ section.l-c-banner {
 
 .pd-contact-card-sec .container{
     padding: 0 75px;
+}
+
+/* blog page */
+
+.pd-pad-t-b-10{
+    padding: 0 10%;
+}
+
+.pd-blog-section .pd-blog-img{
+    width: 100%;
+    height: 260px;
+    object-fit: cover;
+}
+
+.pd-blog-section .pd-content-n-e{
+    box-shadow: 0px 5px 24px -12px #00000063;
+    padding: 20px;
+}
+
+.pd-blog-section .pd-content-n-e p{
+    margin-bottom:5px;
+}
+
+.pd-blog-section .pd-content-n-e a.hover-green{
+    background: rgba(51, 53, 51,1);
+    border-radius: 0;
+    padding: 5px 14px 6px !important;
+    color: white;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 26px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.pd-blog-section .pd-content-n-e .pd-flex img{
+ filter: invert(0.7);
+}
+
+.pd-blog-section .pd-content-n-e .pd-flex a{
+    width: 25%;
+}
+.pd-blog-section .pd-content-n-e .pd-links {
+    width: 75%;
+    text-align: right;
 }
